<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_label">Username:</string>
    <string name="please_hint">Please enter your name</string>
    <string name="password_label">Password:</string>
    <string name="pleasePassword_hint">Please enter a password</string>
    <string name="submit_label">Submit</string>
</resources>
