<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/fields"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username_label" />

            <EditText
                android:id="@+id/please_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/username_label"
                android:layout_weight="3"
                android:hint="@string/please_hint" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/password_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password_label" />

            <EditText
                android:id="@+id/pleasePassword_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/password_label"
                android:layout_weight="3"
                android:hint="@string/pleasePassword_hint" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/fields"
        android:layout_below="@+id/fields"
        android:text="@string/submit_label" />
</RelativeLayout>
